[package]
name = "btree"
version = "0.1.0"
authors = ["Gijun Oh <ss5kijun@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.3.0"
anyhow = "1.0.58"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
rand = "0.8.5"
